--- a/cloud-storage-common/pom.xml
+++ b/cloud-storage-common/pom.xml
@@ -9,7 +9,7 @@
     </parent>
     <modelVersion>4.0.0</modelVersion>
 
-    <artifactId>simple-telnet</artifactId>
+    <artifactId>cloud-storage-common</artifactId>
 
     <properties>
         <maven.compiler.source>8</maven.compiler.source>
