--- a/cloud-storage-server/pom.xml
+++ b/cloud-storage-server/pom.xml
@@ -16,4 +16,12 @@
         <maven.compiler.target>8</maven.compiler.target>
     </properties>
 
+    <dependencies>
+        <dependency>
+            <groupId>com.geekbrains</groupId>
+            <artifactId>cloud-storage-common</artifactId>
+            <version>1</version>
+        </dependency>
+    </dependencies>
+
 </project>
